# sntpex-ti

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: api.md  architecture.md
examples/: main_exemple.c
include/: sntp_ex_lib_ti.h
src/: sntp_ex_lib_ti.c
